tests/parse_print/random_perturb/set01/change-02/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/change-02/change-02.essence:1:18:
unexpected X3
expecting dot, end of input, or statement
    language Essence 1X3
                  ^^^^^^^